css/style.css
/* ... */
.btn--secondary:hover {
  color: var(--color-dark);
  background-color: var(--color-accent-1);
}

.section {
  padding: 0 40px;
}

/* Header */
header {
  background-color: var(--color-dark);
}

.header__container {
  max-width: 1600px;
  height: 120px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
  color: var(--color-accent-1);
}

.logo-main img {
  padding: 10px 20px;
}

header img {
  height: 90px;
}

.header__nav {
  display: flex;
  flex-direction: row;
}

.header__nav img {
  max-height: 25px;
}

.header__nav li a {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.header__search {
  padding: 20px 20px 20px 0;
}

.header__menu {
  padding: 20px 20px 20px 0;
}

.header__nav a {
  color: inherit;
  text-decoration: none;
}

.header__nav a:hover {
  text-decoration: underline;
}

.dropdown-menu__info p {
  margin: 0;
}

/* Footer */

footer {
  background-color: var(--color-medium);
  color: var(--color-accent-1);
}

.footer__container {
  max-width: 1200px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 0 auto;
  padding: 70px 30px 30px 30px;
}

.footer__logosymbol {
  max-width: 1200px;
}

.footer__logosymbol img {
  width: 70px;
  padding-top: 15px;
}

.footer__nav a {
  color: inherit;
  text-decoration: none;
  line-height: 2.1;
  font-size: 1rem;
  padding-top: 10px;
}

.footer__nav {
  margin-top: 10px;
}

.footer__nav a:hover {
  text-decoration: underline;
}

.footer__copyright {
  text-align: center;
  padding-bottom: 20px;
  margin: 0;
}

.footer__contact-icons {
  display: flex;
  align-items: center;
}

.footer__contact-icons img {
  max-width: 25px;
  margin-right: 10px;
}

/* Hero section */

.hero {
  background-color: var(--color-dark);
}

.hero__container {
  max-width: 1300px;
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  padding: 50px 30px;
}

.hero__headline {
  color: var(--color-accent-2);
  z-index: 1;
}

.hero__headline h1 {
  margin-bottom: 30px;
}

.hero__element {
  z-index: 1;
}

.hero__element img {
  max-width: 600px;
  /* margin: 0 120px 100px 0; */
  transform: translateX(0px);
  animation: float 6s ease-out infinite;
}

@keyframes float {
  0% {
    transform: translateY(0px);
  }
  50% {
    transform: translateY(-30px);
  }
  100% {
    transform: translateY(0px);
  }
}

.hero__gradient {
  position: absolute;
  overflow: hidden;
}

.hero__gradient img {
  width: 100%;
  height: auto;
  display: block;
}

/* Events Section */
.events {
  background-color: var(--color-medium);
}

.events__title {
  max-width: 1300px;
  margin: 0 auto;
  color: var(--color-accent-1);
  padding: 50px 20px 0 20px;
}

.events__main_container {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 20px;
  overflow-x: auto;
  padding: 80px 20px;
  scroll-snap-type: x mandatory;
}

.events__card {
  position: relative;
  aspect-ratio: 2 / 3;
  width: 100%;
  max-width: 300px;
  border-radius: 15px;
  overflow: hidden;
}

.events__card::before {
  content: "";
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  background: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0) 40%,
    rgba(0, 0, 0, 1) 100%
  );
  pointer-events: none;
}

.events__card-label {
  color: var(--color-dark);
  background-color: var(--color-accent-1);
  padding: 10px 20px;
  border-radius: 15px;
  position: absolute;
  top: 20px;
  right: 20px;
  z-index: 1;
}

.events__card-title {
  color: var(--color-accent-1);
  position: absolute;
  bottom: 25px;
  left: 15px;
  z-index: 1;
}

.events__card-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
}

/* Explore section */
.explore {
  background-color: var(--color-dark);
}

.explore__container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-auto-rows: 1fr;
  margin: 0 auto;
  gap: 20px;
  max-width: 1300px;
  padding: 40px 0;
}

.explore p {
  font-size: 2rem;
  padding: 20px 20px;
}

.box {
  border-radius: 15px;
  overflow: hidden;
  position: relative;
}

.explore__box1 img,
.explore__box2 img,
.explore__box4 img,
.explore__box5 img {
  max-width: 250px;
  height: auto;
}

.explore__box3 img,
.explore__box6 img {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
  object-position: center;
}

.explore__box1 {
  background-color: var(--color-medium);
  grid-column: span 2;
}

.explore__box1 img,
.explore__box1 p {
  color: var(--color-accent-1);
  position: absolute;
}

.explore__box1 p {
  right: 8%;
  bottom: 8%;
}

.explore__box1 img {
  top: 5%;
  left: 4%;
}

.explore__box2 {
  background-color: var(--color-accent-1);
  grid-row: span 2;
}

.explore__box2 img {
  right: 18%;
  top: 5%;
}

.explore__box2 p {
  bottom: 0;
  left: 5%;
}

.explore__box4 {
  background-color: var(--color-accent-3);
}

.explore__box2 img,
.explore__box2 p,
.explore__box4 img,
.explore__box4 p,
.explore__box5 img,
.explore__box5 p {
  position: absolute;
}

.explore__box4 img {
  bottom: 10%;
  right: 2%;
}

.explore__box4 p {
  color: #ffffff;
  top: 4%;
  left: 4%;
}

.explore__box5 {
  background-color: var(--color-light);
  grid-column: span 2;
}

.explore__box5 img {
  bottom: 10%;
  right: 6%;
}

.explore__box5 p {
  top: 8%;
  left: 4%;
}

.explore h2 {
  color: var(--color-accent-2);
  margin: 40px 0px;
}

.explore__main-container {
  max-width: 1300px;
  margin: 0 auto;
  padding: 20px 20px 40px 20px;
}

.explore__main-container p {
  line-height: 1.2;
}

/* Dropdown Menu */
.dropdown-menu {
  background-color: var(--color-accent-1);
  height: 100vh;
  width: 100vw;
  position: fixed;
  top: 0;
  right: 0;
  z-index: 999;
  display: none;
}

.dropdown-menu__content {
  display: flex;
  flex-direction: column;
  max-width: 1100px;
  margin: 0 auto;
  color: var(--color-dark);
  gap: 40px;
  padding: 100px 20px 20px 20px;
  position: relative;
  z-index: 1;
}
/* ... */

